quick fix with z-index

--- a/frontend/src/HOC/Header/Header.module.css
+++ b/frontend/src/HOC/Header/Header.module.css
@@ -6,6 +6,7 @@
   background-color: var(--bg-darkest);
   padding: 0 4.8rem;
   justify-content: space-between;
+  z-index: 10;
 }
 
 .btnCatalog svg {
